Fixes:    Find as you type feature for assistant (inspired by firefox) Task:     95338 AutoTest: none Details:  Find as you type feature (inspired by firefox)        RevBy:    thomas
[git-p4: depot-paths = "//depot/qt/main/": change = 201677]

--- a/tools/assistant/assistant.qrc
+++ b/tools/assistant/assistant.qrc
@@ -17,5 +17,7 @@
   <file>images/assistant-128.png</file>
   <file>images/addtab.png</file>
   <file>images/closetab.png</file>
+  <file>images/close.png</file>
+  <file>images/wrap.png</file>
 </qresource>
 </RCC>
