--- a/examples/painting/svgviewer/svgviewer.qrc
+++ b/examples/painting/svgviewer/svgviewer.qrc
@@ -1,7 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/">
-	<file>files/cubic.svg</file>
-	<file>files/spheres.svg</file>
+  <file>files/bubbles.svg</file>
 </qresource>
 </RCC>
 
