--- a/examples/widgets/movie/movie.qrc
+++ b/examples/widgets/movie/movie.qrc
@@ -1,8 +1,9 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file>icons/eject.png</file>
-    <file>icons/play-pause.png</file>
-    <file>icons/quit.png</file>
-    <file>icons/stop.png</file>
+    <file>images/open.png</file>
+    <file>images/play.png</file>
+    <file>images/pause.png</file>
+    <file>images/quit.png</file>
+    <file>images/stop.png</file>
 </qresource>
 </RCC>
