--- a/demos/sqlbrowser/browserwidget.ui
+++ b/demos/sqlbrowser/browserwidget.ui
@@ -35,14 +35,6 @@
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <layout class="QHBoxLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-     </layout>
      <widget class="ConnectionWidget" name="connectionWidget" >
       <property name="sizePolicy" >
        <sizepolicy>
@@ -61,6 +53,9 @@
         <horstretch>2</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="selectionBehavior" >
+       <enum>QAbstractItemView::SelectRows</enum>
       </property>
      </widget>
     </widget>
