p4i integration Integrate 209188 from 4.1 to main: Fixes:    Start blending in the 24x24 icons for windows/plastique RevBy:    Roberto        Details:  Mr Grantham didn't get all of the icons in, but for the time        being let's start putting things in so nothing gets lost. I also needed to make        sure mac gets the correct icons in assistant.
[git-p4: depot-paths = "//depot/qt/main/": change = 209189]

--- a/tools/assistant/assistant.qrc
+++ b/tools/assistant/assistant.qrc
@@ -1,5 +1,15 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/trolltech/assistant/">
+  <file>images/mac/editcopy.png</file>
+  <file>images/mac/find.png</file>
+  <file>images/mac/home.png</file>
+  <file>images/mac/next.png</file>
+  <file>images/mac/prev.png</file>
+  <file>images/mac/print.png</file>
+  <file>images/mac/whatsthis.png</file>
+  <file>images/mac/book.png</file>
+  <file>images/mac/zoomin.png</file>
+  <file>images/mac/zoomout.png</file>
   <file>images/win/editcopy.png</file>
   <file>images/win/find.png</file>
   <file>images/win/home.png</file>
@@ -8,12 +18,12 @@
   <file>images/win/print.png</file>
   <file>images/win/whatsthis.png</file>
   <file>images/win/book.png</file>
+  <file>images/win/zoomin.png</file>
+  <file>images/win/zoomout.png</file>
   <file>images/designer.png</file>
   <file>images/assistant.png</file>
   <file>images/linguist.png</file>
   <file>images/qt.png</file>
-  <file>images/win/zoomin.png</file>
-  <file>images/win/zoomout.png</file>
   <file>images/assistant-128.png</file>
   <file>images/addtab.png</file>
   <file>images/closetab.png</file>
