--- a/tools/linguist/linguist/finddialog.ui
+++ b/tools/linguist/linguist/finddialog.ui
@@ -1,6 +1,6 @@
-<ui version="4.0" stdsetdef="1" >
-  <class>FindDialog</class>
-  <comment>*********************************************************************
+<ui version="4.0" >
+ <author></author>
+ <comment>*********************************************************************
 **
 ** Copyright (C) 1992-$THISYEAR$ Trolltech AS. All rights reserved.
 **
@@ -12,213 +12,204 @@
 ** WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 **
 *********************************************************************</comment>
-  <widget class="QDialog" name="FindDialog" >
-    <property name="objectName" >
-      <string notr="true" >FindDialog</string>
-    </property>
-    <property name="geometry" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>414</width>
-        <height>139</height>
-      </rect>
-    </property>
-    <property name="sizePolicy" >
-      <sizepolicy>
-        <hsizetype>5</hsizetype>
-        <vsizetype>4</vsizetype>
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-      </sizepolicy>
-    </property>
-    <property name="windowTitle" >
-      <string>Qt Linguist</string>
-    </property>
-    <property name="whatsThis" stdset="0" >
-      <string>This window allows you to search for some text in the translation source file.</string>
-    </property>
-    <layout class="QHBoxLayout" >
-      <property name="objectName" >
-        <string notr="true" >unnamed</string>
-      </property>
-      <item>
-        <layout class="QVBoxLayout" >
-          <property name="objectName" >
-            <string notr="true" >unnamed</string>
+ <exportmacro></exportmacro>
+ <class>FindDialog</class>
+ <widget class="QDialog" name="FindDialog" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>414</width>
+    <height>139</height>
+   </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy>
+    <hsizetype>5</hsizetype>
+    <vsizetype>4</vsizetype>
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="windowTitle" >
+   <string>Qt Linguist</string>
+  </property>
+  <property name="whatsThis" >
+   <string>This window allows you to search for some text in the translation source file.</string>
+  </property>
+  <layout class="QHBoxLayout" >
+   <property name="margin" >
+    <number>11</number>
+   </property>
+   <property name="spacing" >
+    <number>6</number>
+   </property>
+   <item>
+    <layout class="QVBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <layout class="QHBoxLayout" >
+       <property name="margin" >
+        <number>0</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="findWhat" >
+         <property name="text" >
+          <string>Find what:</string>
+         </property>
+         <property name="buddy" >
+          <cstring>led</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="led" >
+         <property name="whatsThis" >
+          <string>Type in the text to search for.</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="groupBox" >
+       <property name="title" >
+        <string>Options</string>
+       </property>
+       <layout class="QGridLayout" >
+        <property name="margin" >
+         <number>9</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item row="1" column="0" >
+         <widget class="QCheckBox" name="sourceText" >
+          <property name="whatsThis" >
+           <string>Source texts are searched when checked.</string>
           </property>
-          <item>
-            <layout class="QHBoxLayout" >
-              <property name="objectName" >
-                <string notr="true" >unnamed</string>
-              </property>
-              <item>
-                <widget class="QLabel" name="findWhat" >
-                  <property name="objectName" >
-                    <string notr="true" >findWhat</string>
-                  </property>
-                  <property name="text" >
-                    <string>Find what:</string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QLineEdit" name="led" >
-                  <property name="objectName" >
-                    <string notr="true" >led</string>
-                  </property>
-                  <property name="whatsThis" stdset="0" >
-                    <string>Type in the text to search for.</string>
-                  </property>
-                </widget>
-              </item>
-            </layout>
-          </item>
-          <item>
-            <spacer name="spacer3" >
-              <property name="sizeHint" >
-                <size>
-                  <width>0</width>
-                  <height>0</height>
-                </size>
-              </property>
-              <property name="sizeType" >
-                <enum>Expanding</enum>
-              </property>
-              <property name="orientation" >
-                <enum>Vertical</enum>
-              </property>
-            </spacer>
-          </item>
-          <item>
-            <layout class="QGridLayout" >
-              <property name="objectName" >
-                <string notr="true" >unnamed</string>
-              </property>
-              <item row="0" column="0" >
-                <widget class="QCheckBox" name="sourceText" >
-                  <property name="objectName" >
-                    <string notr="true" >sourceText</string>
-                  </property>
-                  <property name="text" >
-                    <string>Source texts</string>
-                  </property>
-                  <property name="checked" >
-                    <bool>true</bool>
-                  </property>
-                  <property name="whatsThis" stdset="0" >
-                    <string>Source texts are searched when checked.</string>
-                  </property>
-                </widget>
-              </item>
-              <item row="0" column="1" >
-                <widget class="QCheckBox" name="matchCase" >
-                  <property name="objectName" >
-                    <string notr="true" >matchCase</string>
-                  </property>
-                  <property name="text" >
-                    <string>Match case</string>
-                  </property>
-                  <property name="whatsThis" stdset="0" >
-                    <string>Texts such as 'TeX' and 'tex' are considered as different when checked.</string>
-                  </property>
-                </widget>
-              </item>
-              <item row="1" column="0" >
-                <widget class="QCheckBox" name="translations" >
-                  <property name="objectName" >
-                    <string notr="true" >translations</string>
-                  </property>
-                  <property name="text" >
-                    <string>Translations</string>
-                  </property>
-                  <property name="checked" >
-                    <bool>true</bool>
-                  </property>
-                  <property name="whatsThis" stdset="0" >
-                    <string>Translations are searched when checked.</string>
-                  </property>
-                </widget>
-              </item>
-              <item row="2" column="0" >
-                <widget class="QCheckBox" name="comments" >
-                  <property name="objectName" >
-                    <string notr="true" >comments</string>
-                  </property>
-                  <property name="text" >
-                    <string>Comments</string>
-                  </property>
-                  <property name="checked" >
-                    <bool>true</bool>
-                  </property>
-                  <property name="whatsThis" stdset="0" >
-                    <string>Comments and contexts are searched when checked.</string>
-                  </property>
-                </widget>
-              </item>
-            </layout>
-          </item>
-        </layout>
-      </item>
-      <item>
-        <layout class="QVBoxLayout" >
-          <property name="objectName" >
-            <string notr="true" >unnamed</string>
+          <property name="text" >
+           <string>Source texts</string>
           </property>
-          <item>
-            <widget class="QPushButton" name="findNxt" >
-              <property name="objectName" >
-                <string notr="true" >findNxt</string>
-              </property>
-              <property name="text" >
-                <string>Find Next</string>
-              </property>
-              <property name="whatsThis" stdset="0" >
-                <string>Click here to find the next occurrence of the text you typed in.</string>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <widget class="QPushButton" name="cancel" >
-              <property name="objectName" >
-                <string notr="true" >cancel</string>
-              </property>
-              <property name="text" >
-                <string>Cancel</string>
-              </property>
-              <property name="whatsThis" stdset="0" >
-                <string>Click here to close this window.</string>
-              </property>
-            </widget>
-          </item>
-          <item>
-            <spacer name="spacer2" >
-              <property name="sizeHint" >
-                <size>
-                  <width>20</width>
-                  <height>51</height>
-                </size>
-              </property>
-              <property name="sizeType" >
-                <enum>Expanding</enum>
-              </property>
-              <property name="orientation" >
-                <enum>Vertical</enum>
-              </property>
-            </spacer>
-          </item>
-        </layout>
-      </item>
+          <property name="checked" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" >
+         <widget class="QCheckBox" name="translations" >
+          <property name="whatsThis" >
+           <string>Translations are searched when checked.</string>
+          </property>
+          <property name="text" >
+           <string>Translations</string>
+          </property>
+          <property name="checked" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" >
+         <widget class="QCheckBox" name="matchCase" >
+          <property name="whatsThis" >
+           <string>Texts such as 'TeX' and 'tex' are considered as different when checked.</string>
+          </property>
+          <property name="text" >
+           <string>Match case</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" >
+         <widget class="QCheckBox" name="comments" >
+          <property name="whatsThis" >
+           <string>Comments and contexts are searched when checked.</string>
+          </property>
+          <property name="text" >
+           <string>Comments</string>
+          </property>
+          <property name="checked" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <tabstops>
-    <tabstop>led</tabstop>
-    <tabstop>sourceText</tabstop>
-    <tabstop>translations</tabstop>
-    <tabstop>comments</tabstop>
-    <tabstop>matchCase</tabstop>
-    <tabstop>findNxt</tabstop>
-    <tabstop>cancel</tabstop>
-  </tabstops>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="findNxt" >
+       <property name="whatsThis" >
+        <string>Click here to find the next occurrence of the text you typed in.</string>
+       </property>
+       <property name="text" >
+        <string>Find Next</string>
+       </property>
+       <property name="default" >
+        <bool>true</bool>
+       </property>
+       <property name="flat" >
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancel" >
+       <property name="whatsThis" >
+        <string>Click here to close this window.</string>
+       </property>
+       <property name="text" >
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType" >
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>51</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction></pixmapfunction>
+ <tabstops>
+  <tabstop>led</tabstop>
+  <tabstop>findNxt</tabstop>
+  <tabstop>cancel</tabstop>
+  <tabstop>comments</tabstop>
+  <tabstop>sourceText</tabstop>
+  <tabstop>translations</tabstop>
+  <tabstop>matchCase</tabstop>
+ </tabstops>
+ <resources/>
+ <connections/>
 </ui>
