p4i integration Integrate 211577 from 4.1 to main: Fixes:    Move more logic to the ui file. Buddies was already set up in the ui file, and the action of the cancel button is set up in the ui file. RevBy:    sverre Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 211578]

--- a/tools/linguist/linguist/finddialog.ui
+++ b/tools/linguist/linguist/finddialog.ui
@@ -211,5 +211,22 @@
   <tabstop>matchCase</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>cancel</sender>
+   <signal>clicked()</signal>
+   <receiver>FindDialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>372</x>
+     <y>58</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>373</x>
+     <y>109</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
