--- a/qmake/examples/precompile/mydialog.ui
+++ b/qmake/examples/precompile/mydialog.ui
@@ -1,32 +1,47 @@
-<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
-<class>MyDialog</class>
-<widget class="QDialog">
-    <property name="name">
-        <cstring>MyDialog</cstring>
-    </property>
-    <property name="caption">
-        <string>Mach 2!</string>
-    </property>
-    <vbox>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>aLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Join the life in the fastlane; - PCH enable your project today! -</string>
-            </property>
-        </widget>
-        <widget class="QPushButton">
-            <property name="name">
-                <cstring>aButton</cstring>
-            </property>
-            <property name="text">
-                <string>&amp;Quit</string>
-            </property>
-            <property name="accel">
-                <string>Alt+Q</string>
-            </property>
-        </widget>
-    </vbox>
-</widget>
-</UI>
+<ui version="4.0" >
+ <author></author>
+ <comment></comment>
+ <exportmacro></exportmacro>
+ <class>MyDialog</class>
+ <widget class="QDialog" name="MyDialog" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>401</width>
+    <height>70</height>
+   </rect>
+  </property>
+  <property name="windowTitle" >
+   <string>Mach 2!</string>
+  </property>
+  <layout class="QVBoxLayout" >
+   <property name="margin" >
+    <number>9</number>
+   </property>
+   <property name="spacing" >
+    <number>6</number>
+   </property>
+   <item>
+    <widget class="QLabel" name="aLabel" >
+     <property name="text" >
+      <string>Join the life in the fastlane; - PCH enable your project today! -</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="aButton" >
+     <property name="text" >
+      <string>&amp;Quit</string>
+     </property>
+     <property name="shortcut" >
+      <string>Alt+Q</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
+</ui>
