p4i integration Integrate 214471 from 4.1 to main: Fixes:    Finish with the 24x24 icons and also add in the tab icons Task:     None, at least none that I can find RevBy:    Trust me AutoTest: None Details:  This dragged on for far too long, but at least it is finished now.
[git-p4: depot-paths = "//depot/qt/main/": change = 214472]

--- a/tools/assistant/assistant.qrc
+++ b/tools/assistant/assistant.qrc
@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/trolltech/assistant/">
+  <file>images/mac/addtab.png</file>
+  <file>images/mac/closetab.png</file>
   <file>images/mac/editcopy.png</file>
   <file>images/mac/find.png</file>
   <file>images/mac/home.png</file>
@@ -10,6 +12,8 @@
   <file>images/mac/book.png</file>
   <file>images/mac/zoomin.png</file>
   <file>images/mac/zoomout.png</file>
+  <file>images/win/addtab.png</file>
+  <file>images/win/closetab.png</file>
   <file>images/win/editcopy.png</file>
   <file>images/win/find.png</file>
   <file>images/win/home.png</file>
@@ -25,8 +29,6 @@
   <file>images/linguist.png</file>
   <file>images/qt.png</file>
   <file>images/assistant-128.png</file>
-  <file>images/addtab.png</file>
-  <file>images/closetab.png</file>
   <file>images/close.png</file>
   <file>images/wrap.png</file>
 </qresource>
