p4i integration Integrate 214901 from 4.1-optimized to main: Integrate 214900 from 4.1 to 4.1-optimized: Fixes:    Remove QVFb's qt3support dependance. RevBy:    Ian Walters, Alex Luddy Details:  This should have been done when QVFb was first ported but it wasn't.                  It's currently the only reason Qtopia needs to build qt3support.
[git-p4: depot-paths = "//depot/qt/main/": change = 214902]

--- a/tools/qvfb/config.ui
+++ b/tools/qvfb/config.ui
@@ -45,7 +45,7 @@
       <number>6</number>
      </property>
      <item>
-      <widget class="Q3ButtonGroup" name="ButtonGroup1" >
+      <widget class="QGroupBox" name="ButtonGroup1" >
        <property name="sizePolicy" >
         <sizepolicy>
          <hsizetype>5</hsizetype>
@@ -56,9 +56,6 @@
        </property>
        <property name="title" >
         <string>Size</string>
-       </property>
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
        </property>
        <layout class="QVBoxLayout" >
         <property name="margin" >
@@ -156,12 +153,9 @@
       </widget>
      </item>
      <item>
-      <widget class="Q3ButtonGroup" name="ButtonGroup2" >
+      <widget class="QGroupBox" name="ButtonGroup2" >
        <property name="title" >
         <string>Depth</string>
-       </property>
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
        </property>
        <layout class="QVBoxLayout" >
         <property name="margin" >
@@ -297,12 +291,9 @@
     </widget>
    </item>
    <item>
-    <widget class="Q3GroupBox" name="GroupBox1" >
+    <widget class="QGroupBox" name="GroupBox1" >
      <property name="title" >
       <string>Gamma</string>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
      </property>
      <layout class="QGridLayout" >
       <property name="margin" >
@@ -1543,20 +1534,6 @@
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction></pixmapfunction>
  <customwidgets>
-  <customwidget>
-   <class>Q3ButtonGroup</class>
-   <extends></extends>
-   <header>Qt3Support/Q3ButtonGroup</header>
-   <container>1</container>
-   <pixmap></pixmap>
-  </customwidget>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends></extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-   <pixmap></pixmap>
-  </customwidget>
   <customwidget>
    <class>GammaView</class>
    <extends></extends>
