Fixes:    Add the icon for the new place markers validation feature. Task:     62166 Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 215213]

--- a/tools/linguist/linguist/linguist.qrc
+++ b/tools/linguist/linguist/linguist.qrc
@@ -20,6 +20,7 @@
     <file>images/mac/next.png</file>
     <file>images/mac/nextunfinished.png</file>
     <file>images/mac/phrase.png</file>
+    <file>images/mac/validateplacemarkers.png</file>
     <file>images/mac/prev.png</file>
     <file>images/mac/prevunfinished.png</file>
     <file>images/mac/print.png</file>
@@ -39,6 +40,7 @@
     <file>images/win/next.png</file>
     <file>images/win/nextunfinished.png</file>
     <file>images/win/phrase.png</file>
+    <file>images/win/validateplacemarkers.png</file>
     <file>images/win/prev.png</file>
     <file>images/win/prevunfinished.png</file>
     <file>images/win/print.png</file>
