--- a/tools/designer/src/designer/newform.ui
+++ b/tools/designer/src/designer/newform.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
  <author></author>
-  <comment>*********************************************************************
+ <comment>*********************************************************************
 **
 ** Copyright (C) 1992-$THISYEAR$ Trolltech AS. All rights reserved.
 **
@@ -19,8 +19,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>494</width>
-    <height>300</height>
+    <width>495</width>
+    <height>319</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -43,14 +43,6 @@
      </property>
      <item>
       <widget class="QTreeWidget" name="treeWidget" >
-       <property name="geometry" >
-        <rect>
-         <x>1</x>
-         <y>1</y>
-         <width>256</width>
-         <height>205</height>
-        </rect>
-       </property>
        <property name="sizePolicy" >
         <sizepolicy>
          <hsizetype>1</hsizetype>
@@ -80,14 +72,6 @@
      </item>
      <item>
       <widget class="QLabel" name="lblPreview" >
-       <property name="geometry" >
-        <rect>
-         <x>263</x>
-         <y>1</y>
-         <width>212</width>
-         <height>205</height>
-        </rect>
-       </property>
        <property name="sizePolicy" >
         <sizepolicy>
          <hsizetype>7</hsizetype>
@@ -114,14 +98,6 @@
    </item>
    <item>
     <widget class="QFrame" name="horizontalLine" >
-     <property name="geometry" >
-      <rect>
-       <x>9</x>
-       <y>222</y>
-       <width>476</width>
-       <height>3</height>
-      </rect>
-     </property>
      <property name="frameShape" >
       <enum>QFrame::HLine</enum>
      </property>
@@ -131,110 +107,21 @@
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" >
-     <property name="margin" >
-      <number>1</number>
+    <widget class="QCheckBox" name="chkShowOnStartup" >
+     <property name="text" >
+      <string>Show this Dialog on Startup</string>
      </property>
-     <property name="spacing" >
-      <number>6</number>
+    </widget>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
      </property>
-     <item row="1" column="0" >
-      <widget class="QPushButton" name="openButton" >
-       <property name="geometry" >
-        <rect>
-         <x>1</x>
-         <y>27</y>
-         <width>103</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text" >
-        <string>&amp;Open...</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" >
-      <spacer>
-       <property name="geometry" >
-        <rect>
-         <x>110</x>
-         <y>27</y>
-         <width>147</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>61</width>
-         <height>32</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="2" >
-      <widget class="QPushButton" name="createButton" >
-       <property name="enabled" >
-        <bool>false</bool>
-       </property>
-       <property name="geometry" >
-        <rect>
-         <x>263</x>
-         <y>27</y>
-         <width>103</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text" >
-        <string>C&amp;reate</string>
-       </property>
-       <property name="autoDefault" >
-        <bool>false</bool>
-       </property>
-       <property name="default" >
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="3" >
-      <widget class="QPushButton" name="closeButton" >
-       <property name="geometry" >
-        <rect>
-         <x>372</x>
-         <y>27</y>
-         <width>103</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text" >
-        <string>&amp;Close</string>
-       </property>
-       <property name="autoDefault" >
-        <bool>false</bool>
-       </property>
-       <property name="default" >
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0" colspan="2" >
-      <widget class="QCheckBox" name="chkShowOnStartup" >
-       <property name="geometry" >
-        <rect>
-         <x>1</x>
-         <y>1</y>
-         <width>256</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text" >
-        <string>Show this Dialog on Startup</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <property name="standardButtons" >
+      <set>QDialogButtonBox::Close</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
