--- a/demos/books/bookwindow.ui
+++ b/demos/books/bookwindow.ui
@@ -63,7 +63,7 @@
           <item row="2" column="1" >
            <widget class="QComboBox" name="genreEdit" >
             <property name="enabled" >
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -77,7 +77,7 @@
           <item row="1" column="1" >
            <widget class="QComboBox" name="authorEdit" >
             <property name="enabled" >
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -91,7 +91,7 @@
           <item row="0" column="1" >
            <widget class="QLineEdit" name="titleEdit" >
             <property name="enabled" >
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -105,16 +105,16 @@
           <item row="3" column="1" >
            <widget class="QSpinBox" name="yearEdit" >
             <property name="enabled" >
-             <bool>false</bool>
+             <bool>true</bool>
+            </property>
+            <property name="prefix" >
+             <string/>
             </property>
             <property name="maximum" >
              <number>2100</number>
             </property>
             <property name="minimum" >
              <number>-1000</number>
-            </property>
-            <property name="prefix" >
-             <string/>
             </property>
            </widget>
           </item>
@@ -133,40 +133,10 @@
            </widget>
           </item>
           <item row="4" column="1" >
-           <widget class="QComboBox" name="ratingEdit" >
-            <property name="enabled" >
-             <bool>false</bool>
+           <widget class="QSpinBox" name="ratingEdit" >
+            <property name="maximum" >
+             <number>5</number>
             </property>
-            <item>
-             <property name="text" >
-              <string>No stars</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>1 star</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>2 stars</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>3 stars</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>4 stars</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>5 stars</string>
-             </property>
-            </item>
            </widget>
           </item>
          </layout>
@@ -181,6 +151,10 @@
  <pixmapfunction></pixmapfunction>
  <tabstops>
   <tabstop>bookTable</tabstop>
+  <tabstop>titleEdit</tabstop>
+  <tabstop>authorEdit</tabstop>
+  <tabstop>genreEdit</tabstop>
+  <tabstop>yearEdit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
